--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.8",
+    "@chakra-ui/react": "^1.4.2",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "formik": "^2.2.6",
+    "framer-motion": "4",
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
