--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
-    "styled-components": "^5.2.3"
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
